--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -28,6 +29,7 @@
         ga('send', 'pageview');
     </script>
 </head>
+
 <body>
     <section class="section1">
         <div class="overley">
@@ -148,16 +150,18 @@
                         <!--Change below!-->
                         <h1 class="mb-3">Our mortgage expertise = your gain</h1>
                         <div style="padding:56.25% 0 0 0;position:relative;">
-                            <iframe src="https://player.vimeo.com/video/261027231?title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;"
+                            <iframe src="https://player.vimeo.com/video/273095762?loop=1&title=0&byline=0&portrait=0" style="position:absolute;top:0;left:0;width:100%;height:100%;"
                                 frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
                         </div>
-                        <script src="https://player.vimeo.com/api/player.js"></script>
                         <div class="content">
                             <p class="lead mt-3"> Here's how we can help obtaining a Mortgage Refinance:</p>
                             <div class="">
-                                <p><i class="fas fa-check mr-3 cl"></i>Interest Savings</p>
-                                 <p><i class="fas fa-check mr-3 cl"></i>You can concentrate on investing own money instead of paying high interest on credit
-                                    cards</p>
+                                <p>
+                                    <i class="fas fa-check mr-3 cl"></i>Interest Savings</p>
+                                <p>
+                                    <i class="fas fa-check mr-3 cl"></i>You can concentrate on investing own money instead of paying high interest on credit
+                                    cards
+                                </p>
                             </div>
                             <a class="bg btn btn-primary click text-center  mt-2" href="#">Learn More</a>
                         </div>
@@ -169,6 +173,7 @@
     <footer>
         <P>© 2018. ALL RIGHTS RESERVED.</P>
     </footer>
+    <script src="https://player.vimeo.com/api/player.js"></script>
     <script type="text/javascript" src="https://vg434.infusionsoft.com/app/webTracking/getTrackingCode"></script>
     <script type="text/javascript" src="https://vg434.infusionsoft.com/resources/external/recaptcha/production/recaptcha.js?b=1.69.0.754"></script>
     <script src="https://www.google.com/recaptcha/api.js?onload=onloadInfusionRecaptchaCallback&render=explicit" async="async"
@@ -191,4 +196,5 @@
         });
     </script>
 </body>
+
 </html>
